# PixAnalyzer

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
pixanalyzer/: __init__.py  main.py  threshold.py
pixanalyzer/libs/: __init__.py  threshold.py
sampledata/: sample_jumping_spyder_video_pixel_intensities.xlsx
tests/sampledata/: sample_jumping_spyder_video_setting_info.json
